# vnstat-ui

./: README.md
.github/workflows/: electron-build.yml
electron/: .gitignore  main.js  package.json  preload.js
electron/loading-screen/: index.html
electron/src/: index.ts
react-ui/: config-overrides.js  github-ci.json  package.json
react-ui/public/: index.html
react-ui/src/: App.tsx  Container.tsx  Panel.tsx  container.module.css  file.d.ts  index.css  panel.module.css
react-ui/src/api/: vnstat.ts
react-ui/src/component/: YouAreNotRunningOnElectron.tsx
react-ui/src/component/charts/: DailyAnalyse.tsx  DailyUsageChart.tsx  MonthUploadVsDownloadChart.tsx  ThisYearChart.tsx
react-ui/src/component/float/: Float.tsx  float.module.css
react-ui/src/component/sidebar/: DataUsageSummeryFloat.tsx  Sidebar.tsx  sidebar.module.css
react-ui/src/component/sidebar/floats/: DataUsageSummeryFloat.tsx  SelectInterfaceFloat.tsx  select.module.css  sum.module.css
react-ui/src/component/topbar/: TopBar.tsx  topbar.module.css
react-ui/src/hooks/: electron.ts  float.ts
react-ui/src/store/: dataStore.ts  interfaceStore.ts
react-ui/src/type/: file.d.ts  response.ts
rust-processor/: Cargo.toml
rust-processor/src/: lib.rs  structure.rs
