[package]
name = "rust-processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen="0.2.78"
serde_json="1.0.72"
serde= {version = "1.0.130", features = ["derive"]}
console_error_panic_hook="0.1.7"
